--- a/Atividade Prática Semana 1/index.html
+++ b/Atividade Prática Semana 1/index.html
@@ -19,7 +19,7 @@
         <h3>Olá, </h3>
         <h1>Eu sou Marcelo Passamai Marques</h1>
         <img src="img/Foto 1.jpeg" alt="Foto" width="350">
-        <h2>Crio aplicações Web que proporcionam uma ótima experiência de navegação para o usuário.</h2>
+        <h2>Estudo programação de sites com HTML e CSS no IFES.</h2>
         <hr>
         <h3>O que você vai encontrar aqui:</h3>
         <dl>
